--- a/vite-project/src/pages/inicio/inicio.module.scss
+++ b/vite-project/src/pages/inicio/inicio.module.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -9,9 +11,9 @@
     height: 100%;
     
     background-color: black;
-    display: flex; /* Alinha as seções lado a lado */
-    justify-content: space-between; /* Espacamento entre as seções */
-    align-items: flex-start; /* Alinha as seções no topo */
+    display: flex; 
+    justify-content: space-between;
+    align-items: flex-start; 
     
 }
 main{
@@ -55,9 +57,9 @@ main{
 }
 
 .botoes{
-    display: flex; /* Alinha as seções lado a lado */
-    justify-content: space-between; /* Espacamento entre as seções */
-    align-items: flex-start; /* Alinha as seções no topo */
+    display: flex; 
+    justify-content: space-between; 
+    align-items: flex-start; 
     
 }
 
